--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %} {% block content %} {% include 'header.html' %}
 <main>
   {% include 'sections/hero.html' %} {% include './sections/about_us.html' %} {% include
-  './sections/our_service.html' %} {% include './sections/our_team.html' %} {% include
-  './sections/our_reviews.html' %} {% include './sections/booking.html' %} {% include
-  './sections/contacts.html' %}
+  './sections/about_info.html' %} {% include './sections/our_service.html' %} {% include
+  './sections/our_team.html' %} {% include './sections/our_reviews.html' %} {% include
+  './sections/booking.html' %} {% include './sections/contacts.html' %}
 </main>
 {% include 'footer.html' %} {% endblock %}
