SD:10-add-contacts
add-contacts

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -3,6 +3,6 @@
   {% include 'sections/hero.html' %} {% include './sections/about_us.html' %} {% include
   './sections/about_info.html' %} {% include './sections/our_service.html' %} {% include
   './sections/our_team.html' %} {% include './sections/our_reviews.html' %} {% include
-  './sections/booking.html' %} {% include './sections/contacts.html' %}
+  './sections/contacts.html' %}
 </main>
 {% include 'footer.html' %} {% endblock %}
